--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,12 @@ rand = "0.9.2" #Losowość
 active-win-pos-rs = "0.9.1" #Aktywne okno
 image = { version = "0.25", default-features = false, features = ["png"] } #Wczytywanie png
 
+[build-dependencies]
+winres = "0.1.12"
+
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
